Use babel, fix jitter on windows browsers by hiding tooltip overflow

--- a/src/styles/tooltip.scss
+++ b/src/styles/tooltip.scss
@@ -8,6 +8,7 @@
 
 #tooltip {
   position: absolute;
+  overflow: hidden;
   width: 300px;
   max-height: 600px;
   padding: 10px;
